[package]
name = "blockchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
blake3.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true