[package]
name = "consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
blockchain-core = { path = "../blockchain-core" }
cryptography = { path = "../cryptography" }
transaction = { path = "../transaction" }