[package]
name = "cryptography"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
blake3.workspace = true
sha2.workspace = true
sha3.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
rand.workspace = true
base64.workspace = true
