[package]
name = "cryptography"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true
base64.workspace = true
subtle.workspace = true
signature = "2.2"
criterion.workspace = true

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
