[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
blockchain-core = { path = "../blockchain-core" }
node = { path = "../node" }