[package]
name = "merkle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic, deterministic, reusable Merkle Tree engine for the QSB ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true
cryptography.workspace = true
blockchain-core = { path = "../blockchain-core" }

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "merkle_bench"
harness = false
