[package]
name = "miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
blockchain-core = { path = "../blockchain-core" }
consensus = { path = "../consensus" }
cryptography = { path = "../cryptography" }
mempool = { path = "../mempool" }