[package]
name = "networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
libp2p.workspace = true
bytes.workspace = true
blockchain-core.workspace = true
transaction.workspace = true
