[package]
name = "node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blockchain-core = { path = "../blockchain-core" }
cryptography = { path = "../cryptography" }
transaction = { path = "../transaction" }
consensus = { path = "../consensus" }
networking = { path = "../networking" }
storage = { path = "../storage" }
mempool = { path = "../mempool" }
miner = { path = "../miner" }
config = { path = "../config" }
logging = { path = "../logging" }
telemetry = { path = "../telemetry" }
wallet = { path = "../wallet" }