[package]
name = "transaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
hex.workspace = true
blake3.workspace = true
blockchain-core.workspace = true
cryptography.workspace = true
