[package]
name = "transaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Immutable, extensible transaction domain model for the QSB ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true
blockchain-core = { path = "../blockchain-core" }
cryptography = { path = "../cryptography" }
