[package]
name = "wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
hex.workspace = true
base64.workspace = true
blockchain-core.workspace = true
cryptography.workspace = true
